--- a/app/src/main/res/layout/activity_registro_pacientes.xml
+++ b/app/src/main/res/layout/activity_registro_pacientes.xml
@@ -300,7 +300,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <Button
-                android:id="@+id/btnCitasAgendadasA"
+                android:id="@+id/btnMedicamentos"
                 android:layout_width="180dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="6dp"
@@ -329,7 +329,7 @@
                 android:textStyle="bold"
                 android:text="Pacientes"
                 android:textSize="18sp"
-                app:layout_constraintEnd_toStartOf="@+id/btnCitasAgendadasA"
+                app:layout_constraintEnd_toStartOf="@+id/btnMedicamentos"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
