--- a/app/src/main/res/layout/activity_listado_pacientes.xml
+++ b/app/src/main/res/layout/activity_listado_pacientes.xml
@@ -39,9 +39,8 @@
             android:fontFamily="sans-serif"
             android:text="Pacientes"
             android:textAlignment="center"
-            android:textColor="#ffffff"
-            android:textSize="25dp"
-            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
