modifique unas interfaces

--- a/app/src/main/res/layout/activity_registro_pacientes.xml
+++ b/app/src/main/res/layout/activity_registro_pacientes.xml
@@ -28,6 +28,7 @@
                 android:layout_marginTop="3dp"
                 android:background="@drawable/ic_edittext_background"
                 android:ems="10"
+                android:fontFamily="@font/raleway_extrabold_italic"
                 android:inputType="text"
                 android:textColor="#000000"
                 android:textSize="16sp"
@@ -37,14 +38,14 @@
 
             <TextView
                 android:id="@+id/textView15"
-                android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="26dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="3dp"
-                android:fontFamily="sans-serif"
+                android:fontFamily="@font/raleway_extrabold_italic"
                 android:text="Nombres"
+                android:textColor="@color/black"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toTopOf="@+id/txtNombreCitas"
                 app:layout_constraintStart_toStartOf="parent"
@@ -52,14 +53,14 @@
 
             <TextView
                 android:id="@+id/textView16"
-                android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="26dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="3dp"
-                android:fontFamily="sans-serif"
+                android:fontFamily="@font/raleway_extrabold_italic"
                 android:text="Número de cama"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@+id/txtTipoSangreSolicitud"
                 app:layout_constraintStart_toStartOf="parent"
@@ -71,25 +72,26 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
                 android:background="@drawable/ic_edittext_background"
-                android:ems="10"
-                android:textColorHint="@color/black"
-                android:inputType="none"
-                android:focusable="false"
                 android:clickable="false"
+                android:ems="10"
+                android:focusable="false"
+                android:fontFamily="@font/raleway_extrabold_italic"
+                android:inputType="none"
+                android:textColorHint="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
             <TextView
                 android:id="@+id/textView27"
-                android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="26dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="3dp"
-                android:fontFamily="sans-serif"
+                android:fontFamily="@font/raleway_extrabold_italic"
                 android:text="Apellidos"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@+id/txtDuiSolicitud"
                 app:layout_constraintStart_toStartOf="parent"
@@ -101,26 +103,27 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
                 android:background="@drawable/ic_edittext_background"
+                android:clickable="false"
                 android:ems="10"
+                android:focusable="false"
+                android:fontFamily="@font/raleway_extrabold_italic"
+                android:inputType="none"
                 android:textColorHint="@color/black"
                 android:textSize="16sp"
-                android:inputType="none"
-                android:focusable="false"
-                android:clickable="false"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView27" />
 
             <TextView
                 android:id="@+id/textView18"
-                android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="26dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="3dp"
-                android:fontFamily="sans-serif"
+                android:fontFamily="@font/raleway_extrabold_italic"
                 android:text="Enfermedad"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@+id/txtTelefonoCitas"
                 app:layout_constraintStart_toStartOf="parent"
@@ -132,26 +135,27 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
                 android:background="@drawable/ic_edittext_background"
+                android:clickable="false"
                 android:ems="10"
+                android:focusable="false"
+                android:fontFamily="@font/raleway_extrabold_italic"
+                android:inputType="phone"
                 android:textColorHint="@color/black"
                 android:textSize="16sp"
-                android:inputType="phone"
-                android:focusable="false"
-                android:clickable="false"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView18" />
 
             <TextView
                 android:id="@+id/textView19"
-                android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="26dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="3dp"
-                android:fontFamily="sans-serif"
+                android:fontFamily="@font/raleway_extrabold_italic"
                 android:text="Edad"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@+id/txtCorreoSolicitud"
                 app:layout_constraintStart_toStartOf="parent"
@@ -159,14 +163,14 @@
 
             <TextView
                 android:id="@+id/textView20"
-                android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="26dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="3dp"
-                android:fontFamily="sans-serif"
+                android:fontFamily="@font/raleway_extrabold_italic"
                 android:text="Número de habitación"
+                android:textColor="@color/black"
                 android:textSize="19sp"
                 app:layout_constraintBottom_toTopOf="@+id/txtFechaSolicitud"
                 app:layout_constraintStart_toStartOf="parent"
@@ -178,12 +182,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
                 android:background="@drawable/ic_edittext_background"
+                android:clickable="false"
                 android:ems="10"
+                android:focusable="false"
+                android:fontFamily="@font/raleway_extrabold_italic"
+                android:inputType="textEmailAddress"
                 android:textColorHint="@color/black"
                 android:textSize="16sp"
-                android:inputType="textEmailAddress"
-                android:focusable="false"
-                android:clickable="false"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView19" />
@@ -194,25 +199,26 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
                 android:background="@drawable/ic_edittext_background"
-                android:ems="10"
-                android:textColor="#000000"
-                android:inputType="date"
-                android:focusable="false"
                 android:clickable="false"
+                android:ems="10"
+                android:focusable="false"
+                android:fontFamily="@font/raleway_extrabold_italic"
+                android:inputType="date"
+                android:textColor="#000000"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView20"  />
+                app:layout_constraintTop_toBottomOf="@+id/textView20" />
 
             <TextView
                 android:id="@+id/textView21"
-                android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="26dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="3dp"
-                android:fontFamily="sans-serif"
+                android:fontFamily="@font/raleway_extrabold_italic"
                 android:text="Fecha Ingreso"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@+id/txtMotivoCitas"
                 app:layout_constraintStart_toStartOf="parent"
@@ -226,9 +232,10 @@
                 android:layout_marginBottom="7dp"
                 android:background="@drawable/ic_edittext_background"
                 android:ems="10"
-                android:textColor="#000000"
+                android:fontFamily="@font/raleway_extrabold_italic"
                 android:gravity="start|top"
                 android:inputType="text"
+                android:textColor="#000000"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@+id/btnEnviarFormulario"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -237,12 +244,12 @@
 
             <Button
                 android:id="@+id/btnEnviarFormulario"
-                android:backgroundTint="#3BDA51"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="15dp"
-                android:fontFamily="sans-serif"
+                android:backgroundTint="#3BDA51"
+                android:fontFamily="@font/raleway_extrabold_italic"
                 android:text="Enviar"
                 android:textColor="@color/white"
                 android:textSize="18sp"
@@ -260,10 +267,9 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayout"
-                android:background="@drawable/fondo_gris"
-                android:layout_width="373dp"
-                android:layout_height="96dp"
-                android:layout_marginTop="17dp"
+                android:layout_width="411dp"
+                android:layout_height="200dp"
+                android:background="@drawable/ic_fondo_arriba"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -272,30 +278,26 @@
                     android:id="@+id/ivSmallLogo"
                     android:layout_width="70dp"
                     android:layout_height="69dp"
-                    android:layout_marginStart="36dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="15dp"
                     android:scaleType="centerCrop"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.518"
                     app:srcCompat="@drawable/logo_bloom" />
 
                 <TextView
                     android:id="@+id/textView11"
-                    android:layout_width="130dp"
-                    android:textColor="@color/black"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="30dp"
-                    android:fontFamily="sans-serif"
+                    android:layout_marginTop="100dp"
+                    android:fontFamily="@font/raleway_extrabold_italic"
                     android:text="Registro de pacientes"
                     android:textAlignment="center"
-                    android:textSize="25dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:textColor="@color/black"
+                    android:textSize="32sp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toEndOf="@+id/ivSmallLogo"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.515" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -338,9 +340,9 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout5"
-        android:background="#CCCCCC"
         android:layout_width="412dp"
         android:layout_height="86dp"
+        android:background="@drawable/fondo_gris"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -348,10 +350,10 @@
 
         <ImageView
             android:id="@+id/ivMenuCircle"
-            android:background="@drawable/ic_circulo_menu"
             android:layout_width="41dp"
             android:layout_height="43dp"
             android:layout_marginBottom="1dp"
+            android:background="@drawable/ic_circulo_menu"
             app:layout_constraintBottom_toTopOf="@+id/btnNoticias"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.70"
