--- a/app/src/main/res/layout/activity_nuevos_medicamentos.xml
+++ b/app/src/main/res/layout/activity_nuevos_medicamentos.xml
@@ -24,7 +24,7 @@
             android:id="@+id/txtNombreCitas"
             android:layout_width="360dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="5dp"
             android:background="@drawable/ic_edittext_background"
             android:ems="10"
             android:inputType="text"
@@ -40,9 +40,9 @@
             android:id="@+id/textView15"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="26dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="3dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="5dp"
             android:fontFamily="sans-serif"
             android:text="Nombre del medicamento"
             android:textColor="@color/black"
@@ -55,9 +55,9 @@
             android:id="@+id/textView27"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="26dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="3dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="5dp"
             android:fontFamily="sans-serif"
             android:inputType="textMultiLine"
             android:text="Descripción del medicamento"
@@ -71,7 +71,7 @@
             android:id="@+id/txtDuiSolicitud"
             android:layout_width="360dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="5dp"
             android:background="@drawable/ic_edittext_background"
             android:clickable="false"
             android:ems="10"
@@ -116,10 +116,9 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
-            android:layout_width="373dp"
-            android:layout_height="96dp"
-            android:layout_marginTop="17dp"
-            android:background="@drawable/fondo_gris"
+            android:layout_width="411dp"
+            android:layout_height="200dp"
+            android:background="@drawable/ic_fondo_arriba"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -128,30 +127,27 @@
                 android:id="@+id/ivSmallLogo"
                 android:layout_width="70dp"
                 android:layout_height="69dp"
-                android:layout_marginStart="28dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 android:scaleType="centerCrop"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.518"
                 app:srcCompat="@drawable/logo_bloom" />
 
             <TextView
                 android:id="@+id/textView11"
-                android:layout_width="135dp"
-                android:layout_height="64dp"
-                android:layout_marginStart="30dp"
-                android:fontFamily="sans-serif"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="90dp"
+                android:fontFamily="@font/raleway_extrabold_italic"
                 android:text="Registro de medicamentos"
                 android:textAlignment="center"
                 android:textColor="@color/black"
-                android:textSize="20dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:textSize="32dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/ivSmallLogo"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.593" />
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
